# voxel_demo

./: Cargo.toml  LICENSE  README.md
assets/: water_material.wgsl
src/: main.rs  map.rs  textures.rs
