[package]
name = "voxel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_voxel_world = { version = "0.10.2", features = ["noise", "smooth-bevy-cameras"] }
bevy = "0.15"
rand = "0.8.5"
noise = "0.9.0"
smooth-bevy-cameras = "0.13.0"
